--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /android/
 addons/godotsteam/win64/~libgodotsteam.windows.template_debug.x86_64.dll
 addons/godot-git-plugin/win64/~libgit_plugin.windows.editor.x86_64.dll
+assets/audio/.cache
+assets/audio/.unsaved
+assets/audio/.user
